[gd_scene load_steps=7 format=3 uid="uid://dss6ihk74bphr"]

[ext_resource type="Script" path="res://scenes/user_interface/user_interface.gd" id="1_7p11o"]
[ext_resource type="Theme" uid="uid://bx3rgbhg0k4eg" path="res://scenes/user_interface/main_gui.tres" id="2_5ifnt"]
[ext_resource type="PackedScene" uid="uid://b3wvduy77hk5t" path="res://scenes/user_interface/settings_panel_container.tscn" id="3_5fxiv"]
[ext_resource type="PackedScene" uid="uid://c2lg2741coag5" path="res://scenes/user_interface/counter_container.tscn" id="3_q1ing"]
[ext_resource type="PackedScene" uid="uid://b62lhg1okvmgn" path="res://scenes/user_interface/credits.tscn" id="6_nn11o"]

[sub_resource type="LabelSettings" id="LabelSettings_4g40l"]
font_size = 14

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_7p11o")

[node name="MainGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_5ifnt")

[node name="GUI" type="Control" parent="MainGUI"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TopLeftMarginContainer" type="MarginContainer" parent="MainGUI/GUI"]
layout_mode = 1
offset_right = 111.0
offset_bottom = 71.0
size_flags_horizontal = 0
mouse_filter = 2

[node name="DayPanelContainer" type="PanelContainer" parent="MainGUI/GUI/TopLeftMarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainGUI/GUI/TopLeftMarginContainer/DayPanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="DayLabel" type="Label" parent="MainGUI/GUI/TopLeftMarginContainer/DayPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Day: 0"
horizontal_alignment = 1

[node name="CurrentDateLabel" type="Label" parent="MainGUI/GUI/TopLeftMarginContainer/DayPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "March, 10, 2023"
label_settings = SubResource("LabelSettings_4g40l")
horizontal_alignment = 1

[node name="TopRightMarginContainer" type="MarginContainer" parent="MainGUI/GUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 495.0
offset_right = 600.0
offset_bottom = 36.0
grow_horizontal = 0
size_flags_horizontal = 8
mouse_filter = 2

[node name="CounterPanelContainer" type="PanelContainer" parent="MainGUI/GUI/TopRightMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="EatenCounterLabel" type="Label" parent="MainGUI/GUI/TopRightMarginContainer/CounterPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Eaten: 0"
horizontal_alignment = 2

[node name="BottomLeftMarginContainer" type="MarginContainer" parent="MainGUI/GUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 284.0
offset_right = 105.0
offset_bottom = 320.0
grow_vertical = 0
size_flags_horizontal = 8
mouse_filter = 2

[node name="Panel" type="Panel" parent="MainGUI/GUI/BottomLeftMarginContainer"]
layout_mode = 2

[node name="CreditsButton" type="Button" parent="MainGUI/GUI/BottomLeftMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
text = "Credits"
flat = true
icon_alignment = 1

[node name="BottomRightMarginContainer" type="MarginContainer" parent="MainGUI/GUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 425.0
offset_top = 178.0
offset_right = 600.0
offset_bottom = 320.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MainGUI/GUI/BottomRightMarginContainer"]
layout_mode = 2
alignment = 2

[node name="MenuButton" type="CheckButton" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
theme_override_colors/font_color = Color(0.905882, 0.666667, 0.211765, 1)
theme_override_colors/font_pressed_color = Color(0.905882, 0.666667, 0.211765, 1)
theme_override_colors/font_hover_color = Color(0.905882, 0.666667, 0.211765, 1)
theme_override_colors/font_hover_pressed_color = Color(0.905882, 0.666667, 0.211765, 1)
theme_override_colors/font_focus_color = Color(0.905882, 0.666667, 0.211765, 1)
theme_override_colors/font_outline_color = Color(0.905882, 0.666667, 0.211765, 1)
theme_override_font_sizes/font_size = 24
text = "Menu"
flat = true
alignment = 2

[node name="TabContainer" type="TabContainer" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 160)
layout_mode = 2
size_flags_vertical = 8
tab_alignment = 2

[node name="Cheese" type="TabBar" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="CounterContainer" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer/TabContainer/Cheese" node_paths=PackedStringArray("gui") instance=ExtResource("3_q1ing")]
layout_mode = 1
gui = NodePath("../../../../../../..")

[node name="Settings" type="TabBar" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="SettingsPanelContainer" parent="MainGUI/GUI/BottomRightMarginContainer/VBoxContainer/TabContainer/Settings" instance=ExtResource("3_5fxiv")]
layout_mode = 1

[node name="Credits" parent="MainGUI" node_paths=PackedStringArray("gui") instance=ExtResource("6_nn11o")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 70.0
offset_top = 180.0
offset_right = 570.0
offset_bottom = 180.0
gui = NodePath("../GUI")
